# Sync-Engine-Client-Side

./: Cargo.toml  Package.swift  cbindgen.toml
.build/: workspace-state.json
.build/index-build/: build.db  debug.yaml  plugin-tools.yaml  workspace-state.json
.build/index-build/arm64-apple-macosx/debug/: description.json  plugin-tools-description.json
.build/index-build/arm64-apple-macosx/debug/ModuleCache/27E7XVSZXRN8H/: AvailabilityMacros-1R8AB8N4VAFAG.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  DarwinFoundation-1W8U2OOUAA1YQ.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  MachO-20RPYVQSX341K.pcm  ObjectiveC-1G8H182PQX3QE.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  TargetConditionals-1C41IB3E7JLP3.pcm  XPC-T0ZXCAST7PE3.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_iso646-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdatomic-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  _Builtin_stddef-19KE09ZDXQ6Q3.pcm  _Builtin_stdint-19KE09ZDXQ6Q3.pcm  _Builtin_tgmath-19KE09ZDXQ6Q3.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm  __wctype-47SZ9A199RUD.pcm  _assert-47SZ9A199RUD.pcm  _complex-47SZ9A199RUD.pcm  (+45 more)
.build/index-build/arm64-apple-macosx/debug/SyncEngine.build/: SyncEngine-Swift.h  SyncEngine.emit-module.d  master.priors  module.modulemap  output-file-map.json  sources
scripts/: make_xcframework.sh  package_spm.sh
src/: ffi.rs  lib.rs  merge.rs  oplog.rs  sync.rs
swift/Sources/SyncEngine/: SyncEngine.swift
(+174 files in other folders)
