[package]
name = "sync-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.10"
serde_json = "1.0.130"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "sync_engine"
crate-type = ["rlib", "staticlib"]